# dsp-codegen

./: .gitignore  CMakeLists.txt  example.inp  example.outp  ioctl.outp  main.cc  regtest.json  uml.drawio  user.outp
agregate/: CMakeLists.txt
agregate/cpp/: agregator.hpp
agregate/interface/: agregator.hpp
common/: CMakeLists.txt  eformat.hpp  format.hpp
generate/: CMakeLists.txt  generator.hpp  ilayout.hpp  imodel.hpp  iserializer.hpp  layout.hpp  model.hpp  operation.hpp  render.hpp  serializer.hpp  translation.hpp
generate/cpp/: comment.hpp  cpplayout.hpp  extra.hpp  function.hpp  layout.hpp  model.hpp  rval.hpp  structure.hpp
generate/cpp/ioctl/: function.hpp
generate/cpp/model/: function.hpp  rval.hpp  structure.hpp
generate/cpp/type/: bool.hpp  empty.hpp  enum.hpp  int.hpp  struct.hpp  uint.hpp  void.hpp
generate/file/: serializer.hpp
generate/generic/: comment.hpp  function.hpp  layout.hpp  model.hpp  serializer.hpp  structure.hpp
generate/generic/model/: function.hpp  rval.hpp  structure.hpp
generate/include/agregate/: interface.hpp
generate/include/agregate/cpp/: interface.hpp
generate/include/cpp/ioctl/: function.hpp
generate/include/cpp/type/: bool.hpp  struct.hpp
generate/include/file/: serializer.hpp
generate/include/generic/model/: model.hpp  structure.hpp
generate/include/interface/: iserializer.hpp  type.hpp
generate/include/isp/: codegen.hpp
generate/include/syntax/cpp/: layout.hpp
generate/include/syntax/cpp/ioctl/: function.hpp
generate/include/syntax/cpp/model/: comment.hpp  function.hpp  rval.hpp  structure.hpp
generate/include/syntax/cpp/type/: bool.hpp  empty.hpp  enum.hpp  int.hpp  struct.hpp  type.hpp  uint.hpp  void.hpp
generate/include/syntax/generic/: layout.hpp  serializer.hpp
generate/include/syntax/generic/model/: model.hpp  structure.hpp
generate/include/syntax/interface/: iserializer.hpp  type.hpp
generate/include_priv/cpp/: layout.hpp  types.hpp
generate/include_priv/cpp/model/: comment.hpp
generate/include_priv/generic/: layout.hpp  serializer.hpp
generate/include_priv/generic/model/: model.hpp  structure.hpp  type.hpp
generate/interface/: ilayout.hpp  imodel.hpp  iserializer.hpp  type.hpp
generate/isp/: CMakeLists.txt
generate/isp/include/isp/: codegen.hpp
generate/isp/src/: codegen.cpp
generate/isp/src/c/: codegen.cpp
generate/isp/src/c/template/: opt_getter.hpp  opt_modifier.hpp  reg_structure.hpp  scale_macro.hpp  util.hpp
generate/isp/src/c/template/module/: ioctl_case.hpp  priv_ioctl.hpp
generate/isp/src/c/template/userspace/: reg_structure.hpp  util.hpp
generate/isp/src/cpp/: codegen.cpp
generate/isp/src/cpp/template/: opt_getter.hpp  opt_modifier.hpp  reg_structure.hpp  scale_macro.hpp  util.hpp
generate/src/agregate/: agregator.cpp  logic.cpp
generate/src/file/: logic.cpp  serializer.cpp
generate/src/isp/: codegen.cpp
lexem/: CMakeLists.txt  lexem.hpp
output/: ioctl.h  priv_ioctl.c  user.c
parse/: CMakeLists.txt  README.md  reg.hpp  reglex.cc  reglex.l  reglexer.hpp  regtest.inp  regtype.hpp
parse/include/: iregparser.hpp
parse/include/json/: regparser.hpp
parse/interface/: CMakeLists.txt  iregparser.hpp
parse/json/: CMakeLists.txt
parse/json/include/json/: regparser.hpp
parse/json/src/: error.hpp  regparser.cpp
parse/src/json/: error.hpp
parser/: CMakeLists.txt  main.cpp  reglex.l  reglexer.hpp  regparser.hpp  regtest.inp  regtest.json
parser/include/: iregparser.hpp
parser/include/interface/: iregparser.hpp
parser/include/json/: regparser.hpp
parser/interface/: iregparser.hpp
parser/json/: jsonregparser.hpp  regparser.hpp
parser/register/: format.hpp  option.hpp  register.hpp  rwmode.hpp
parser/src/json/: regparser.cpp
serialize/: CMakeLists.txt  README.md
serialize/file/: CMakeLists.txt
serialize/file/include/: fileserializer.hpp
serialize/file/include/file/: serializer.hpp
serialize/file/src/: fileserializer.cpp  serializer.cpp
serialize/generic/: CMakeLists.txt  serializer.hpp
serialize/generic/generic/: serializer.hpp
serialize/interface/: CMakeLists.txt  iserializer.hpp
syntax/: CMakeLists.txt  README.md
syntax/c/: CMakeLists.txt
syntax/c/c/: layout.hpp  types.hpp
syntax/c/c/fixedp/: sign_magnitude.hpp  signed.hpp  unsigned.hpp
syntax/c/c/model/: case.hpp  comment.hpp  enum.hpp  function.hpp  macro.hpp  ptr.hpp  rval.hpp  structure.hpp
syntax/cpp/: CMakeLists.txt
syntax/cpp/cpp/: extra.hpp  layout.hpp  types.hpp
syntax/cpp/cpp/fixedp/: unsigned.hpp
syntax/cpp/cpp/ioctl/: function.hpp
syntax/cpp/cpp/model/: comment.hpp  enum.hpp  function.hpp  macro.hpp  ptr.hpp  rval.hpp  structure.hpp
syntax/generic/: CMakeLists.txt
syntax/generic/generic/: clojure.hpp  layout.hpp  model.hpp
syntax/generic/generic/model/: comment.hpp  function.hpp  model.hpp  rval.hpp  structure.hpp  type.hpp
syntax/interface/: CMakeLists.txt  ilayout.hpp  imodel.hpp  importable.hpp
test/: ioctl.h  main.c  user.c
utility/: CMakeLists.txt  format.hpp  register.hpp  rwmode.hpp  type.hpp  uint.hpp
utility/interface/: type.hpp
utility/interface/register/: option.hpp
utility/register/: fixedp.hpp  format.hpp  option.hpp  register.hpp  rwmode.hpp
utility/type/: bool.hpp  format.hpp  string.hpp  struct.hpp  type.hpp  uint.hpp  void.hpp
